--- a/Module 5 6 Machine Problem - S4 Technical/index.html
+++ b/Module 5 6 Machine Problem - S4 Technical/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Guide</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
@@ -20,7 +20,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin facilisis pretium volutpat. Maecenas eu neque non nunc aliquet luctus. Quisque laoreet, nulla at mollis elementum, metus libero scelerisque ipsum, id faucibus enim neque eget ipsum. Cras euismod nibh quis orci feugiat, vitae suscipit metus luctus. Vestibulum vehicula ullamcorper libero, sed accumsan nunc pellentesque non. Vestibulum consectetur at orci vulputate egestas. Sed convallis aliquam nunc, eu commodo arcu. Aenean eu ultrices magna, pharetra varius mi.
 
 Nulla facilisi. Suspendisse mi erat, suscipit quis feugiat sed, auctor nec justo. Integer vel velit metus. Nam viverra nulla in nunc mattis, quis facilisis justo dignissim. Cras sit amet iaculis ante, et ornare nunc. Donec consectetur dui quis lacinia convallis. Cras fringilla enim id magna feugiat, vitae ultrices enim lacinia.">
-                    <img src="asset/steak.jpg" class="card-img-top" alt="Japan Overload">
+                    <img src="asset/steak.png" class="card-img-top" alt="Japan Overload">
                     <div class="card-overlay">
                         <h5 class="restaurant-name">Japan Overload</h5>
                     </div>
