--- a/Module 5 6 Machine Problem - S4 Technical/index.html
+++ b/Module 5 6 Machine Problem - S4 Technical/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="col-md-3">
                 <div class="card restaurant-card" data-name="Chili Crab"
-                data-info="A truly indulgent dish that combines the sweetness of fresh crab with the fiery, mouth-watering heat of chili sauce. The tender crab meat is coated in a thick, aromatic sauce made from a blend of red chilies, garlic, ginger, and tomato, creating a perfect balance of spiciness and sweetness. Each bite of juicy crab is soaked in the rich, savory sauce, with a lingering heat that excites the taste buds. Served with a side of warm, fluffy buns to soak up the sauce, this dish is a messy, flavorful, and utterly satisfying experience.">>
+                data-info="A truly indulgent dish that combines the sweetness of fresh crab with the fiery, mouth-watering heat of chili sauce. The tender crab meat is coated in a thick, aromatic sauce made from a blend of red chilies, garlic, ginger, and tomato, creating a perfect balance of spiciness and sweetness. Each bite of juicy crab is soaked in the rich, savory sauce, with a lingering heat that excites the taste buds. Served with a side of warm, fluffy buns to soak up the sauce, this dish is a messy, flavorful, and utterly satisfying experience.">
                     <img src="assets/chili crab.jpg" class="card-img-top" alt="Chili Crab">
                     <div class="card-overlay">
                         <h5 class="restaurant-name">Chili Crab</h5>
