--- a/Module 5 6 Machine Problem S4 Technical - LIGUTAN/index.html
+++ b/Module 5 6 Machine Problem S4 Technical - LIGUTAN/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aldrin's Restaurant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <a href="#" class="menu-btn" id="menuBtn">MAIN MENU</a>
@@ -67,15 +68,15 @@
                 <div class="title" id="detailTitle2"></div>
                 <div class="details">
                     <div class="detail-row">
-                        <span>Quezon City</span>
+                        <span>Malabon City</span>
                         <span>Category: <span id="detailCategory">Filipino</span></span>
                     </div>
                     <div class="detail-row">
-                        <span>T: 09272323223</span>
+                        <span>T: +(555) 123-4567</span>
                         <span>Open: 10 am to 10 pm</span>
                     </div>
                     <div class="detail-row">
-                        <span>W: BigCakes</span>
+                        <span>W: Exotic Foods</span>
                         <span>Price: ₱₱</span>
                     </div>
                 </div>
@@ -85,5 +86,6 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
