--- a/Module 5 6 Machine Problem S4 Technical - LIGUTAN/index.html
+++ b/Module 5 6 Machine Problem S4 Technical - LIGUTAN/index.html
@@ -41,7 +41,7 @@
             <div class="col-md-3">
                 <div class="restaurant-card" data-food="Stinky Tofu">
                     <h5>Stinky Tofu</h5>
-                    <img src="assets/s" alt="Stinky Tofu">
+                    <img src="assets/stinkytofu.jpg" alt="Stinky Tofu">
                     <div class="card-overlay">
                         This beloved street food is known for its distinctive aroma, which many find intriguing and irresistible. Deep-fried to golden perfection, the stinky tofu has a crispy, crunchy exterior that gives way to a soft, slightly fermented interior. The flavor is an adventurous blend of savory, earthy, and tangy notes, balanced by a kick of spice from accompanying chili sauce or pickled vegetables. Served on skewers or in a bowl, this dish is a bold and unforgettable experience that perfectly embodies the charm of traditional Taiwanese street food.
                     </div>
