--- a/Module 5 6 Machine Problem S4 Technical - LIGUTAN/index.html
+++ b/Module 5 6 Machine Problem S4 Technical - LIGUTAN/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <script src="script.js"></script>
     <a href="#" class="menu-btn" id="menuBtn">MAIN MENU</a>
     <div class="overlay" id="overlay"></div>
 
