--- a/Module 5 6 Machine Problem S4 Technical - LIGUTAN/index.html
+++ b/Module 5 6 Machine Problem S4 Technical - LIGUTAN/index.html
@@ -280,19 +280,18 @@
                 <div class="details">
                     <div class="detail-row">
                         <span>Malabon City</span>
-                        <span>Category: <span id="detailCategory">Filipino</span></span>
+                        <span>Category: <span id="detailCategory">Exotic Foods</span></span>
                     </div>
                     <div class="detail-row">
                         <span>T: +(555) 123-4567</span>
                         <span>Open: 10 am to 10 pm</span>
                     </div>
                     <div class="detail-row">
-                        <span>W: Exotic Foods</span>
-                        <span>Price: ₱₱</span>
+                        <span>LIGUTAN RES</span>
+                        <span>Price: ₱₱₱</span>
                     </div>
                 </div>
                 <div class="description" id="detailDescription">
-                    <!-- Description will be dynamically inserted -->
                 </div>
             </div>
         </div>
