--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -193,7 +193,7 @@
                     id: "18713238",
                     question: "When you log in for the first time using Fiori Launchpad, you are requested to change your password?",
                     options: ["False", "True"],
-                    correctAnswer: "False" // Common SAP practice, but not explicitly stated as mandatory for first login in provided text. Assuming false for general Fiori behavior.
+                    correctAnswer: "True" // Common SAP practice, but not explicitly stated as mandatory for first login in provided text. Assuming false for general Fiori behavior.
                 },
                 {
                     id: "18713239",
@@ -490,12 +490,6 @@
                     correctAnswer: "True"
                 },
                 {
-                    id: "18794224",
-                    question: "Match the relationship of given word(s) on the left column with the word(s) on the right column. (This question type is not supported in this format. Please choose the best fit for a multiple choice question.)",
-                    options: ["Option A", "Option B", "Option C", "Option D"],
-                    correctAnswer: "Option A" // Placeholder, as matching questions are not supported.
-                },
-                {
                     id: "18794337",
                     question: "Which of the following should not be included in capabilities in the Real-Time Inventory Management use case from an IT perspective?",
                     options: ["Separation of data Entities", "Reduced memory footprint", "No aggregate tables", "Highest possible data consistency"],
@@ -565,7 +559,7 @@
                     id: "19022702",
                     question: "Peter Schwarz as a student, he engineered ultra-light composite frames?",
                     options: ["False", "True"],
-                    correctAnswer: "False" // Corrected based on FA1-93
+                    correctAnswer: "True" // Corrected based on FA1-93
                 },
                 // Additional questions from FAs-Business-Process.pdf (FA1) not found in M1-M2.pdf
                 {
