--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -690,13 +690,13 @@
                 },
                 {
                     id: "FA1-39",
-                    question: "Trading Goods products – Accessories",
-                    options: ["True", "False", "Accessories"], // Added options for clarity
+                    question: "Trading Goods products",
+                    options: ["Accessories"], // Added options for clarity
                     correctAnswer: "Accessories" // This is a definition, not a true/false.
                 },
                 {
                     id: "FA1-41",
-                    question: "All of the following are examples of SAP S/4 HANA documents except Product Document.",
+                    question: "All of the following are examples of SAP S/4 HANA documents except ____.",
                     options: ["Product Document", "Sales Order Document", "Purchase Order Document", "Financial Document"],
                     correctAnswer: "Product Document"
                 },
@@ -1000,7 +1000,7 @@
                     id: "18792169",
                     question: "All of the following fields are Purchase Organization specific Information except ___.",
                     options: ["Currency", "Incoterms", "Purchasing Organization", "Terms of Payment"],
-                    correctAnswer: "Purchasing Organization" // Purchasing Organization is the organizational unit itself, not a data field within it.
+                    correctAnswer: "Terms of Payment" // Purchasing Organization is the organizational unit itself, not a data field within it.
                 },
                 {
                     id: "18792173",
