--- a/Reviewers/business.html
+++ b/Reviewers/business.html
@@ -1294,7 +1294,7 @@
                     id: "18873620",
                     question: "It is determined for each line item within the order.",
                     options: ["Availability To Promise (ATP)", "Route Determination", "Delivery Scheduling", "Shipping Point"],
-                    correctAnswer: "Availability To Promise (ATP)" // ATP is determined per line item.
+                    correctAnswer: "Shipping Point" // ATP is determined per line item.
                 },
                 {
                     id: "19022802",
@@ -1312,8 +1312,8 @@
                 {
                     id: "FA2-4",
                     question: "Plant – The operating area or branch within company.",
-                    options: ["True", "False", "The operating area or branch within company."],
-                    correctAnswer: "The operating area or branch within company." // This is a definition.
+                    options: ["Plant"],
+                    correctAnswer: "Plant" // This is a definition.
                 },
                 {
                     id: "FA2-5",
